# ind

./: .gitignore  LICENSE  MANIFEST.in  README.md  ind.yml  pyproject.toml  setup.py
examples/clinical_trials/: clinical_trials.py
examples/naaccr/: naaccr.py
examples/ncbi/: esearch.txt  esummary.txt  fetch-abstracts.txt  gene-fasta.txt  linked-uids.txt  ncbi.py
examples/openfda/: all_endpoints_demo.py  all_endpoints_demo.txt
examples/pubchem/: pubchem.py
examples/pubchem/results/: aspirin.sdf
examples/seer/: example_1.txt  example_2.txt  example_3.txt  example_4.txt  example_5.txt  example_6.txt  example_7.txt  example_8.txt  example_9.txt  seer.py
examples/uspto_odp/: patent_decisions.py
ind/: config.py  main.py
ind/gov/: clinical.py  seer.py
src/ind/: __init__.py  _version.py  config.py  main.py  utils.py
src/ind/aggregator/: __init__.py  cli.py  orchrestator.py  service.py  utils.py
src/ind/clinical_trials/: __init__.py  cli.py  client.py  stats.py  studies.py  version.py
src/ind/com/: finance.py  patent.py
src/ind/gov/: fda.py
src/ind/naaccr/: __init__.py  cli.py  client.py  endpoints.py
src/ind/ncbi/: __init__.py  cli.py  client.py  types.py  (+3 more)
tests/clinical_trials/: endpoints.py
tests/naaccr/: test_endpoints.py
tests/ncbi/: test_endpoints_mock.py  test_workflows.py
tests/openfda/: test_client.py  test_endpoints.py
tests/pubchem/: conftest.py  test_cli.py  test_endpoints.py  test_http.py  test_urls.py
tests/seer/: test_endpoints.py
tests/uspto_odp/: client_rate_limit.py  client_rate_limit.txt  endpoints.py  endpoints.txt
(+51 files in other folders)
